added verification of code token and added docs
