# src/swagger/swagger.json
@@ -6,7 +6,7 @@
   },
   "servers": [
     {
-      "url": "///"
+      "url": "photo-drop2.onrender.com"
     }
   ],
   "tags": [{ "name": "Authentication" }],
@@ -15,20 +15,16 @@
       "post": {
         "tags": ["Authentication"],
         "summary": "Send authentication code to phone number",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "description": "JSON-body request",
-            "required": true,
-            "schema": {
-              "$ref": "#/components/schemas/PhoneNumber"
-            },
-            "content": {
-              "application/json": {}
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/PhoneNumberAndCode"
+              }
             }
           }
-        ],
+        },
         "responses": {
           "200": {
             "description": "Authentication code sent successfully",
@@ -37,6 +33,46 @@
                 "example": {
                   "phone": "+1234567890",
                   "code": "484855"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request"
+          },
+          "500": {
+            "description": "Server error"
+          }
+        }
+      }
+    },
+    "/verify": {
+      "post": {
+        "tags": ["Authentication"],
+        "summary": "Verify phone number with the authentication code",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/VerifyRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Verification successful",
+            "content": {
+              "application/json": {
+                "example": {
+                  "id": "9462b20d-3a7f-49c1-bc8a-e1c5345c271f",
+                  "phone": "+380987654321",
+                  "name": "test",
+                  "email": "test@example.com",
+                  "token": "testToken",
+                  "verificationToken": "967986",
+                  "avatar": "https://www.example.com/image.png"
                 }
               }
             }
@@ -63,6 +99,38 @@
           }
         },
         "required": ["phone"]
+      },
+      "PhoneNumberAndCode": {
+        "type": "object",
+        "properties": {
+          "phone": {
+            "type": "string",
+            "description": "Phone number for authentication",
+            "example": "+1234567890"
+          },
+          "code": {
+            "type": "string",
+            "description": "Authentication code",
+            "example": "484855"
+          }
+        },
+        "required": ["phone", "code"]
+      },
+      "VerifyRequest": {
+        "type": "object",
+        "properties": {
+          "phone": {
+            "type": "string",
+            "description": "Phone number for verification",
+            "example": "+380987654321"
+          },
+          "code": {
+            "type": "string",
+            "description": "Verification code",
+            "example": "967986"
+          }
+        },
+        "required": ["phone", "code"]
       }
     }
   }
